--- a/index.html
+++ b/index.html
@@ -56,43 +56,14 @@
                             d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                             clip-rule="evenodd"></path>
 
-
-                        <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toggle</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <label class="toggle">
-        <input type="checkbox" />
-        <div class="off-knob"></div>
-        <div class="on-knob"></div>
-      
-        <svg viewBox="0 0 44 22" xmlns="http://www.w3.org/2000/svg">
-          <rect
-            class="outline"
-            fill="none"
-            rx="11"
-            stroke-linejoin="round"
-            stroke-linecap="round"
-            stroke-width="1"
-          />
-          <rect
-            class="outline outline--blur"
-            fill="none"
-            rx="11"
-            stroke-linejoin="round"
-            stroke-linecap="round"
-            stroke-width="1"
-          />
-        </svg>
-      </label>      
-    <script src="main.js"></script>
-  </body>
-</html>
+<label class="toggle"> 
+    <input type="checkbox">
+    <span class="ball"></span> 
+</label>
+                    <li>
+                        <a href="#features"
+                            class="normalText text-white whiteUnderline block py-3 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0">Tena</a>
+                    </li>
                         
                     </svg>
                 </button>
