--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </li>
                     <li>
 
-                         <a href="#features"
-                            class="normalText text-white whiteUnderline block <a href="/invite" target="_blank"><button type="button" rounded md:hover:bg-transparent md:p-0">Oppe</a>
+                         <a href}="flex md:order-4"
+                            class="normalText text-white whiteUnderline <a href="/invite" target="_blank"><button type="button" rounded md:hover:bg-transparent md:p-0">Oppe</a>
                     </li>
                     <li>
                         
