--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </li>
                     <li>
 
-                         <a href}="flex md:order-4"
+                         <a href}="#features"
                             class="normalText text-white whiteUnderline <a href="/invite" target="_blank"><button type="button" rounded md:hover:bg-transparent md:p-0">Oppe</a>
                     </li>
                     <li>
