--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <li>
 
                          <a href}="#features"
-                            class="normalText text-white whiteUnderline <a href="/invite" target="_blank"><button type="button" rounded md:hover:bg-transparent md:p-0">Oppe</a>
+                            class="normalText text-white whiteUnderline block <a href="/invite" target="_blank"><button type="button" rounded md:hover:bg-transparent md:p-0">Oppe</a>
                     </li>
                     <li>
                         
