--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </li>
                     <li>
 
-                         <a href}="#features"
-                            class="normalText text-white whiteUnderline block <a href="/invite" target="_blank"><button type="button" rounded md:hover:bg-transparent md:p-0">Oppe</a>
+                          <a href="#features"
+                            class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0">cive</a> <a href="/invite" target="_blank"><button type="button"
                     </li>
                     <li>
                         
