--- a/index.html
+++ b/index.html
@@ -57,6 +57,29 @@
                             clip-rule="evenodd"></path>
 
 
+
+
+    <nav class="sticky w-full z-20 top-0 left-0">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="/" class="flex items-center">
+                <img src="/assets/img/Nors.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                <span class="regularTextBold text-white self-center whitespace-nowrap">Nors</span>
+            </a>
+            <div class="flex md:order-2">
+                <a href="/invite" target="_blank"><button type="button"
+                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> Sunucuna ekle</button></a>
+                <button data-collapse-toggle="navbar-sticky" type="button"
+                    class="inline-flex items-center p-2 text-white rounded-xl md:hidden coloredBg aria-controls="
+                    navbar-sticky" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"></path>
+
+
+                        
                         
                     </svg>
                 </button>
