--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </li>
                     <li>
                         <a href="#features"
-                            class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0">zellikler</a>
+                            class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0">Özellikler</a>
                     </li>
                     <li>
 
