--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+   <section class="section" id="login">
+        <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
+            <hr class="customHr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
