--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <section class="section" id="login">
-        <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
+        <div class="main.html">
             <hr class="customHr">
 <head>
     <meta charset="UTF-8">
