--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nors – Discord Sunucun için en iyi Kayıt Botu.</title>
+    <title>Nors – Lcsfr Yazılım Tasarım Tarihi.</title>
     <link rel="icon" type="image/png" href="/assets/img/Nors.png">
     <meta property="og:title" content="Nors">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Kayıt Botu.">
@@ -130,161 +130,6 @@
             <hr class="customHr">
         </div>
     </section>
-
-    <section class="section">
-        <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
-            <p class="extraBoldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48"><span
-                    class="gradientColor"><b>Kurulumu</b></span> son derece basit</p>
-            <p class="smallText text-white opacity-80 mb-8 sm:px-16 lg:px-48">1 dakikadan kısa bir süre içinde Discord
-                Sunucun için kurulumu tamamla!</p>
-            <br>
-            <div class="sm:px-16 lg:px-48">
-                <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
-                    <div class="card h-full">
-                        <div class="items-center overflow-hidden">
-                            <p class="smallText text-white opacity-80 mt-5">Adım 1</p>
-                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Sunucuna
-                                        ekle</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">Nors'u sunucuna ekle.</p>
-                        </div>
-                    </div>
-                    <div class="card h-full">
-                        <div class="items-center overflow-hidden">
-                            <p class="smallText text-white opacity-80 mt-5">Adım 2</p>
-                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Komutu
-                                        kullan</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">/:CMDNAME komutunu kullanarak kayıt
-                                sistemini
-                                hazır hale getir.</p>
-                        </div>
-                    </div>
-                    <div class="card h-full">
-                        <div class="items-center overflow-hidden">
-                            <p class="smallText text-white opacity-80 mt-5">Adım 3</p>
-                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Her şey
-                                        hazır!</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">İşte hazırsın! artık kayıt sistemine
-                                sahipsin.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <br><br>
-            <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
-                <a href="/invite" target="_blank"
-                    class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna ekle
-                    <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                            clip-rule="evenodd"></path>
-                    </svg>
-                </a>
-            </div>
-            <p class="smallText text-white text-center opacity-90 mt-8 mb-8 sm:px-16 lg:px-48"><span class="mr-2"><i
-                        class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Tamamiyle
-                        ayarlanabilir</span></span> <span class="mr-2"><i
-                        class="fa-regular fa-check mr-1 opacity-90"></i>
-                    <span class="opacity-60">Tamamen ücretsiz</span></span></p>
-        </div>
-    </section>
-
-    <section class="section" id="features">
-        <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
-            <hr class="customHr">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="sectionGrid mt-8 mb-8">
-                <div class="sectionGridItem">
-                    <img src="/assets/img/TYPE2.png" draggable="false" alt="IMG" width="500">
-                </div>
-                <div class="sectionGridItem sectionGridItemRight">
-                    <p class="extraBoldText text-white opacity-90">Sistemi kur</p>
-                    <p class="smallText text-white opacity-80 mt-4">Tek komut ile sistemi aktif edebilir, aktif
-                        ettikten sonra dilediğin gibi özelleştirebilirsin.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
-                                class="fa-regular fa-arrow-right"></i></p>
-                    </a>
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="sectionGrid mt-8 mb-8">
-                <div class="sectionGridItem">
-                    <p class="extraBoldText text-white opacity-90">Giriş Mesajını özelleştir</p>
-                    <p class="smallText text-white opacity-80 mt-4">GIF, emoji ve
-                        sana verilen parametreleri ekleyerek mesajı kendi sunucunu özel yap.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
-                                class="fa-regular fa-arrow-right"></i></p>
-                    </a>
-                </div>
-                <div class="sectionGridItem sectionGridItemRight">
-                    <img src="/assets/img/TYPE2.png" draggable="false" alt="IMG" width="500">
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="sectionGrid mt-8 mb-8">
-                <div class="sectionGridItem">
-                    <img src="/assets/img/TYPE2.png" draggable="false" alt="IMG" width="500">
-                </div>
-                <div class="sectionGridItem sectionGridItemRight">
-                    <p class="extraBoldText text-white opacity-90">Sistemi Özelleştir</p>
-                    <p class="smallText text-white opacity-80 mt-4">Kayıt sistemini aktif ettikten sonra
-                        ayarlarını özelleştirebilir, dilersen kayıt sayılarında oynama yapabilirsin.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
-                                class="fa-regular fa-arrow-right"></i></p>
-                    </a>
-
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="sectionGrid mt-8 mb-8">
-                <div class="sectionGridItem">
-                    <p class="extraBoldText text-white opacity-90">Üyeleri Karşıla</p>
-                    <p class="smallText text-white opacity-80 mt-4">Sunucuya üye katıldığında otomatik
-                        etiketler ve
-                        mesaj atarak sunucuya giriş yaptığını haberdar eder.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
-                                class="fa-regular fa-arrow-right"></i></p>
-                    </a>
-
-                </div>
-                <div class="sectionGridItem sectionGridItemRight">
-                    <img src="/assets/img/TYPE2.png" draggable="false" alt="IMG" width="500">
-                </div>
-            </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-
-
-
-
-
-
-
-
-
-
 
 
             <br>
