--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nors – Lcsfr Yazılım Tasarım Tarihi.</title>
     <link rel="icon" type="image/png" href="/assets/img/Nors.png">
-    <meta property="og:title" content="Nors">
+    <meta property="og:title" content="Lcsfr">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Kayıt Botu.">
     <meta property="og:image" content="/assets/img/Nors.png">
     <meta property="og:url" content="/">
@@ -41,7 +41,7 @@
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
                 <img src="/assets/img/Nors.png" draggable="false" class="h-7 mr-3" alt="IMG">
-                <span class="regularTextBold text-white self-center whitespace-nowrap">Nors</span>
+                <span class="regularTextBold text-white self-center whitespace-nowrap">Lcsfr</span>
             </a>
             <div class="flex md:order-2">
                 <a href="/invite" target="_blank"><button type="button"
