--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nors – Lcsfr Yazılım Tasarım Tarihi.</title>
-    <link rel="icon" type="image/png" href="/assets/img/Nors.png">
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1223736109213810698/1224102373157376132/New_Project_65_0834BED.png?ex=661c452c&is=6609d02c&hm=568ee340f7671af6030c78be655f4f2282302b342fab08345146a114523114c5&">
     <meta property="og:title" content="Lcsfr">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Kayıt Botu.">
     <meta property="og:image" content="/assets/img/Nors.png">
