--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nors – Lcsfr Yazılım Tasarım Tarihi.</title>
-    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1223736109213810698/1224102373157376132/New_Project_65_0834BED.png?ex=661c452c&is=6609d02c&hm=568ee340f7671af6030c78be655f4f2282302b342fab08345146a114523114c5&">
+    <title>Lcsfr –  Yazılım Tasarım Tarihi.</title>
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&">
     <meta property="og:title" content="Lcsfr">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Kayıt Botu.">
     <meta property="og:image" content="/assets/img/Nors.png">
