--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Lcsfr">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Kayıt Botu.">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&">
-    <meta property="og:url" content="/">
+    <meta property="og:url" content="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&">
     <meta name="theme-color" content="#5a4fcf">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"
         ntegrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
