--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lcsfr –  Yazılım Tasarım Tarihi.</title>
-    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&">
+    <link rel="icon" type="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&" href="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&">
     <meta property="og:title" content="Lcsfr">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Kayıt Botu.">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&">
