--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
-                <img src="/assets/img/Nors.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                <img src="https://cdn.discordapp.com/attachments/1223736109213810698/1224102803602149436/New_Project_65_CCA376E.png?ex=661c4593&is=6609d093&hm=e74e09c1d7b1a1898ec248b9746fe3cbe7db153d5df45fabbb4b26a19e47475d&" draggable="false" class="h-7 mr-3" alt="IMG">
                 <span class="regularTextBold text-white self-center whitespace-nowrap">Lcsfr</span>
             </a>
             <div class="flex md:order-2">
