--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     
 <body class="container max-w-10xl mx-auto">
 
-    <nav class="sticky w-full z-20 top-0 left-0">
+      <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
-                <img src="https://cdn.discordapp.com/attachments/1223736109213810698/1224298407254949888/New_Project_65_2AFBC87.png?ex=661cfbbe&is=660a86be&hm=ea8ef13cc242fb547adbfe9c09cbb3d481c7380b2effee5b7ee651f5cc455838&">
+                <img src="https://cdn.discordapp.com/attachments/1223736109213810698/1224298407254949888/New_Project_65_2AFBC87.png?ex=661cfbbe&is=660a86be&hm=ea8ef13cc242fb547adbfe9c09cbb3d481c7380b2effee5b7ee651f5cc455838&" draggable="false" class="h-7 mr-3" alt="IMG">
                 <span class="regularTextBold text-white self-center whitespace-nowrap">Lcsfr</span>
             </a>
             <div class="flex md:order-2">
