--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="/invite" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna ekle
+                    Ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
@@ -114,7 +114,7 @@
                         ayarlanabilir</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
                     <span class="opacity-60">Tamamen ücretsiz</span></span></p>
-            <img class="mt-8" src="/assets/img/TYPE1.png" draggable="false" alt="IMG">
+            <img class="mt-8" src="https://cdn.discordapp.com/attachments/1223736109213810698/1224299503914455070/Ekran_goruntusu_2024-04-01_130851.png?ex=661cfcc4&is=660a87c4&hm=3159e673d18fd76f8b9ddcc95016f37b6dfc95bd5c012987dfeef9edf6c8b0be&" draggable="false" alt="IMG">
         </div>
     </section>
 
