--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         ayarlanabilir</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
                     <span class="opacity-60">Tamamen ücretsiz</span></span></p>
-            <img class="mt-8" src="https://cdn.discordapp.com/attachments/1223736109213810698/1224299503914455070/Ekran_goruntusu_2024-04-01_130851.png?ex=661cfcc4&is=660a87c4&hm=3159e673d18fd76f8b9ddcc95016f37b6dfc95bd5c012987dfeef9edf6c8b0be&" draggable="false" alt="IMG">
+            <img class="mt-8" src="https://cdn.discordapp.com/attachments/938931647276019773/1178244484455206963/IMG_3065.jpg?ex=661b8daf&is=660918af&hm=e304f380f982995fa4902bd870b1401159c4e58503e85f93653b638cac5f2b66&" draggable="false" alt="IMG">
         </div>
     </section>
 
