--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
-            <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Türkçe
-                <span class="gradientColor">#1 Numaralı</span> Kayıt Botu.
+            <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Tasarımlar Botlar Yazılımlar!
+                <span class="gradientColor">#1 Numaralı</span> Lcsfr
             </h1>
             <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Nors, sunucun için ayarlanabilen en
-                iyi kayıt sistemlerine sahiptir.</p>
+               Yazılım Tasarım.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-                <a href="/invite" target="_blank"
+                <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
+                        xmlns="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D">
                         <path fill-rule="evenodd"
                             d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
                             clip-rule="evenodd"></path>
@@ -113,7 +113,7 @@
                         class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Tamamiyle
                         ayarlanabilir</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
-                    <span class="opacity-60">Tamamen ücretsiz</span></span></p>
+                    <span class="opacity-60">Nerdeyse ücretsiz</span></span></p>
             <img class="mt-8" src="https://cdn.discordapp.com/attachments/938931647276019773/1178244484455206963/IMG_3065.jpg?ex=661b8daf&is=660918af&hm=e304f380f982995fa4902bd870b1401159c4e58503e85f93653b638cac5f2b66&" draggable="false" alt="IMG">
         </div>
     </section>
@@ -124,8 +124,8 @@
             <br>
             <p class="boldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">Tamamen <span
                     class="gradientColor"><b>senin sunucun</b></span> için tasarlandı.</p>
-            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">100 binden fazla Discord sunucusu
-                tarafından kullanılıyor – 7/24</p>
+            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">Hadi Ne Duryorsun!
+              </p>
             <br>
             <hr class="customHr">
         </div>
