--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <span class="regularTextBold text-white self-center whitespace-nowrap">Lcsfr</span>
             </a>
             <div class="flex md:order-2">
-                <a href="/invite" target="_blank"><button type="button"
-                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> Sunucuna ekle</button></a>
+                <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"><button type="button"
+                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> İletişim</button></a>
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 text-white rounded-xl md:hidden coloredBg aria-controls="
                     navbar-sticky" aria-expanded="false">
@@ -89,9 +89,9 @@
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
             <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Tasarımlar Botlar Yazılımlar!
-                <span class="gradientColor">#1 Numaralı</span> Lcsfr
+                <span class="gradientColor">#1 Numara</span> Lcsfr
             </h1>
-            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Nors, sunucun için ayarlanabilen en
+            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr, sunucun için ayarlanabilen en
                Yazılım Tasarım.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"
