--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Tasarımlar Botlar Yazılımlar!
                 <span class="gradientColor">#1 Numara</span> Lcsfr
             </h1>
-            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr, sunucun için ayarlanabilen en
-               Yazılım Tasarım.</p>
+            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr, Sunucun İçin Ayarlanabilen En İyi
+               Yazılımlar Tasarımlar.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
@@ -122,8 +122,8 @@
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16">
             <hr class="customHr">
             <br>
-            <p class="boldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">Tamamen <span
-                    class="gradientColor"><b>senin sunucun</b></span> için tasarlandı.</p>
+            <p class="boldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">HARİKASIN <span
+                    class="gradientColor"><b>Teym!</b></span> .</p>
             <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">Hadi Ne Duryorsun!
               </p>
             <br>
