--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <hr class="customHr">
             <br>
             <p class="boldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">HARİKASIN <span
-                    class="gradientColor"><b>GOJO!</b></span> (AYNI BEN)</p>
-            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">Hadi Ne Duryorsun!
+                    class="gradientColor"><b>GOJO!</b></span> </p>
+            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48"> (AYNI BEN)
               </p>
             <br>
             <hr class="customHr">
