--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                 <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
                     <div class="cardWBg rounded-xl h-full">
                         <div class="p-6 items-center overflow-hidden mt-5 mb-5">
-                            <center><img src="/assets/img/Nors.png" draggable="false" alt="IMG" style="width: 100%">
+                            <center><img src="https://cdn.discordapp.com/attachments/1223736109213810698/1224465350301843686/Picsart_24-04-01_23-54-48-732.jpg?ex=661d9738&is=660b2238&hm=35d6c431ecd0a1952033debca61586480f36797725964d106c99336ce1e3c3b4&" draggable="false" alt="IMG" style="width: 100%">
                             </center>
-                            <p class="boldText text-white opacity-90 mt-5"><b>SinecKers</b></p>
+                            <p class="boldText text-white opacity-90 mt-5"><b>Lcsfr</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
-                            <p class="smallText gradientColor mt-3"><a href="https://github.com/sineckers"
+                            <p class="smallText gradientColor mt-3"><a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D"
                                     target="_blank" class="gradientUnderline">GitHub <i
                                         class="fa-regular fa-arrow-right"></i></a></p>
