--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Tasarımlar Botlar Yazılımlar!
                 <span class="gradientColor">#1 Numara</span> Lcsfr
             </h1>
-            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr, Sunucun İçin Ayarlanabilen En İyi
-               Yazılımlar Tasarımlar.</p>
+            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr Sunar.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
@@ -153,5 +152,5 @@
                             <p class="boldText text-white opacity-90 mt-5"><b>Lcsfr</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D"
-                                    target="_blank" class="gradientUnderline">GitHub <i
+                                    target="_blank" class="gradientUnderline">İnstgram <i
                                         class="fa-regular fa-arrow-right"></i></a></p>
