--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Tasarımlar Botlar Yazılımlar!
                 <span class="gradientColor">#1 Numara</span> Lcsfr
             </h1>
-            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr Sunar.</p>
+            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Lcsfr, Gibi Olmalısın Sikilsende Ölecek Hale Gelsen Bile Ayağa Kalkman Lazım Acı Olmadan Eğlence Olmaz Yavrum</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
