--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
-            <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Tasarımlar Botlar Yazılımlar!
-                <span class="gradientColor">#1 Numara</span> Lcsfr
+            <h1 class="blackText text-white mb-4 tracking-tight leading-none"    .
+                <span class="gradientColor">  .
             </h1>
-            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48"> Lcsfr, Gibi Olmalısın Sikilsende Ölecek Hale Gelsen Bile Ayağa Kalkman Lazım Ki Zaten Acı Olmadan Eğlence Olmaz Yavrum</p>
+            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">   .   </p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://www.instagram.com/lcsfrr_/?utm_source=qr&igsh=a3dveDJscjBvOXE%3D" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
